# examination_app

./: .env  Cargo.toml
migrations/2023-01-30-112027_create_users/: up.sql
scripts/: init_db.sh
src/: lib.rs  logger.rs  main.rs  schema.rs
src/config/: crypto.rs  mod.rs
src/db/: user.rs
src/errors/: mod.rs
src/handlers/: auth.rs  mod.rs  user.rs
src/models/: user.rs
