[package]
name = "todo-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "todo-actix"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
config = "0.11"

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1.3"
once_cell = "1"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.5"

diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
dotenvy = "0.15"

# DEPENDENCIES SPECIFIC TO AUTH
actix-web-httpauth = "0.8.0"
argonautica = "0.2.0"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.6"
r2d2 = "0.8.9"
jsonwebtoken = "8.2.0"
chrono = { version = "0.4.23", features = ["serde"] }
chrono-tz = "0.8.1"
color-eyre = "0.3"
eyre = "0.4"
validator = "0.10"
validator_derive = "0.10"
futures = { version = "0.3", features = ["compat"] }

[package.metadata.scripts]
watch = "cargo watch -q -c -w src/ -x run | bunyan"
